--- a/ComicMaker.Blazor/Client/ComicMaker.Blazor.Client.csproj
+++ b/ComicMaker.Blazor/Client/ComicMaker.Blazor.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -20,6 +20,9 @@
   <ItemGroup Condition="'$(DesignTimeBuild)' != 'true'">
     <Content Remove="wwwroot\service-worker.js" />
     <Content Update="wwwroot\service-worker.published.js" Link="wwwroot\service-worker.js" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Components\" />
   </ItemGroup>
 
 </Project>
