Added more functionality to Repository Base, Created DateTimeService to support Unit Testing, Refactor out Table to reduce miss spelling errors on table names, create ConnectionStringService to resolve connection string for development and production enviroments, and Create Project Parition Key Generator to have one place to resolve PartionKey names for now it doesn't really create partition

--- a/ComicMaker/ComicMaker.csproj
+++ b/ComicMaker/ComicMaker.csproj
@@ -6,12 +6,11 @@
 
   <ItemGroup>
     <Folder Include="Accounts\Data\" />
-    <Folder Include="Accounts\Models\" />
+    <Folder Include="Accounts\Commands\" />
+    <Folder Include="Accounts\Queries\" />
     <Folder Include="Common\Models\" />
     <Folder Include="Common\Commands\" />
     <Folder Include="Common\Queries\" />
-    <Folder Include="Projects\Data\Interfaces\" />
-    <Folder Include="Projects\Data\Implementations\" />
   </ItemGroup>
 
   <ItemGroup>
