--- a/ComicMaker.Blazor/Shared/ComicMaker.Blazor.Shared.csproj
+++ b/ComicMaker.Blazor/Shared/ComicMaker.Blazor.Shared.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Accounts\Commands\" />
+    <Folder Include="Accounts\Queries\" />
+    <Folder Include="Projects\Queries\" />
+  </ItemGroup>
+
 </Project>
